# Orchis

./: .gitignore  .gitmodules  CMakeLists.txt  CmakeLists.txt  GenerateProjects.bat  README.md  premake5.lua
Core/: CMakeLists.txt
Core/Assets/Shaders/: Shader.frag  Shader.vert
Core/Core/: Application.cpp  Application.h  EventDispatcher.cpp  EventDispatcher.h  Events.h  Input.cpp  Input.h  KeyCodes.h  Macros.h  Mesh.cpp  Mesh.h  OrchisTime.cpp  OrchisTime.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Scene.cpp  Scene.h  Timer.h  Window.cpp  Window.h
Core/Core/VFS/: FS.cpp
Core/Debug/: Logger.cpp  Logger.h
Core/Include/Export/: Orchis.h
Core/Include/PCH/: OrchisPCH.h
Core/Platform/Vulkan/: ImageSamplerManager.cpp  ImageSamplerManager.h  VulkanAPI.cpp  VulkanAPI.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanDebug.h  VulkanDescriptorSets.cpp  VulkanDescriptorSets.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanIndexBuffer.cpp  VulkanIndexBuffer.h  VulkanRenderCommand.cpp  VulkanRenderCommand.h  VulkanRenderContext.h  VulkanRenderPassManager.cpp  VulkanRenderPassManager.h  VulkanStagingBuffer.cpp  VulkanStagingBuffer.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanUniformBuffer.cpp  VulkanUniformBuffer.h  VulkanVertexBuffer.cpp  VulkanVertexBuffer.h
Core/Platform/Windows/: OrchisWindows.cpp  OrchisWindows.h  WindowsInput.cpp  WindowsTimer.cpp  WindowsVulkan.cpp  WindowsWindow.cpp  WindowsWindow.h
Core/Renderer/: AssetManager.cpp  AssetManager.h  Flags.h  GraphicsPipeline.cpp  GraphicsPipeline.h  IndexBuffer.cpp  IndexBuffer.h  RenderCommand.cpp  RenderCommand.h  RenderContext.cpp  RenderContext.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  SceneManager.cpp  SceneManager.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexBuffer.cpp  VertexBuffer.h
Core/Shaders/: CompileShaders.bat  Shader.frag
OrchisEditor/: App.xaml  App.xaml.cs  CMakeLists.txt  OrchisEditor.csproj
OrchisEditor/Assets/Shaders/: compileShaders.bat
OrchisEditor/Controller/: WindowHost.cs
OrchisEditor/Controller/Editor/: AssetManager.cs  Entity.cs  Project.cs  ProjectParser.cs  Scene.cs  SceneManager.cs
OrchisEditor/Controller/Editor/Components/: Component.cs  ComponentManager.cs
OrchisEditor/Controller/Orchis/: Orchis.cs  OrchisInterface.cs  OrchisKeys.cs
OrchisEditor/Controller/Utils/: Parser.cs
OrchisEditor/Properties/: Settings.Designer.cs  launchSettings.json
OrchisEditor/Src/: Editor.cpp  Editor.h  EntryPoint.cpp
OrchisEditor/Styles/: ComponentsStyles.xaml  WindowStyles.xaml
OrchisEditor/View/Editor/: EditorWindow.xaml  EditorWindow.xaml.cs
OrchisEditor/View/Editor/UserControls/: Logger.xaml  Logger.xaml.cs  MenuBar.xaml  MenuBar.xaml.cs  Outliner.xaml  Outliner.xaml.cs  PropertyPanel.xaml  PropertyPanel.xaml.cs  SceneViewer.xaml  SceneViewer.xaml.cs  ToolsPanel.xaml  ToolsPanel.xaml.cs
OrchisEditor/View/ProjectSelector/: ProjectCreatorWindow.xaml  ProjectCreatorWindow.xaml.cs  ProjectSelectorWindow.xaml  ProjectSelectorWindow.xaml.cs
OrchisEditor/View/UserControls/: NumberInput.xaml  NumberInput.xaml.cs  OrchisDialog.xaml  OrchisDialog.xaml.cs  OrchisErrorDialog.xaml  OrchisErrorDialog.xaml.cs  OrchisSaveDialog.xaml  OrchisSaveDialog.xaml.cs  RangedNumberInput.xaml  RangedNumberInput.xaml.cs
OrchisRuntime/: CMakeLists.txt
OrchisRuntime/Core/: Application.cpp  Application.h  EventDispatcher.cpp  EventDispatcher.h  Events.h  Input.h  KeyCodes.h  Macros.h  Mesh.cpp  Mesh.h  OrchisTime.cpp  PerspectiveCamera.cpp  PerspectiveCamera.h  Window.cpp  Window.h
OrchisRuntime/Core/ECS/: ComponentManager.cpp  ComponentManager.h  Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
OrchisRuntime/Core/Utils/: UUID.cpp  UUID.h
OrchisRuntime/Core/VFS/: FS.cpp  FS.h
OrchisRuntime/EditorRuntime/: ApplicationER.cpp  CameraER.cpp  ComponentManagerER.cpp  Editor.cpp  Editor.h  EntityER.cpp  FSER.cpp  RendererER.cpp  SceneER.cpp  SceneManagerER.cpp
OrchisRuntime/EditorRuntime/Editor/: Editor.cpp  Editor.h  Events.cpp
OrchisRuntime/Include/: EntryPoint.h  Orchis.h
OrchisRuntime/Include/Export/: Orchis.h
OrchisRuntime/Include/PCH/: OrchisPCH.cpp  OrchisPCH.h
OrchisRuntime/OrchisGraphicsBackends/OrchisDX12GraphicsBackend/: CMakeLists.txt
OrchisRuntime/OrchisGraphicsBackends/OrchisVulkanGraphicsBackend/: CMakeLists.txt
OrchisRuntime/Platform/Vulkan/: ImageSamplerManager.cpp  ImageSamplerManager.h  VulkanAPI.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanDebug.h  VulkanDescriptorSets.cpp  VulkanDescriptorSets.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanIndexBuffer.cpp  VulkanIndexBuffer.h  VulkanRenderCommand.cpp  VulkanRenderCommand.h  VulkanRenderContext.h  VulkanRenderPassManager.cpp  VulkanRenderPassManager.h  VulkanStagingBuffer.cpp  VulkanStagingBuffer.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanUniformBuffer.cpp  VulkanUniformBuffer.h  VulkanVertexBuffer.cpp  VulkanVertexBuffer.h
OrchisRuntime/Platform/Windows/: OrchisWindows.cpp  OrchisWindows.h  WindowsInput.cpp  WindowsTimer.cpp  WindowsWindow.cpp  WindowsWindow.h
OrchisRuntime/Renderer/: AssetManager.cpp  AssetManager.h  Flags.h  GraphicsPipeline.cpp  GraphicsPipeline.h  IndexBuffer.cpp  IndexBuffer.h  RenderCommand.cpp  RenderCommand.h  RenderContext.cpp  RenderContext.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexBuffer.cpp  VertexBuffer.h
OrchisRuntime/Shaders/: Shader.frag  Shader.vert
OrchisRuntime/Src/Core/: Application.cpp  Application.h  Handles.cpp  Handles.h  Macros.h
OrchisRuntime/Src/Graphics/: Renderer.cpp  Renderer.h  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
OrchisRuntime/src/: Application.cpp  Camera.cpp  Macro.h  Renderer.cpp  Scene.cpp
Sandbox/: CMakeLists.txt
Sandbox/Assets/Shaders/: Shader.frag  Shader.vert
Sandbox/src/: Application.cpp  Application.h  EntryPoint.cpp  Sandbox.cpp  Sandbox.h
(+52 files in other folders)
